--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,13 @@
 {
     "version": 2,
     "builds": [
-        {"src": "main.py", "use": "@vercel/python"}
+        {
+            "src": "main.py",
+            "use": "@vercel/python",
+            "config": {
+                "buildCommand": "sh setup.sh && pip install -r requirements.txt"
+            }
+        }
     ],
     "routes": [
         {"src": "/(.*)", "dest": "main.py"}
